Add first draft of available_frameworks slide

--- a/unit-testing-in-fortran/index.qmd
+++ b/unit-testing-in-fortran/index.qmd
@@ -8,6 +8,8 @@ title: "Unit tesing in Fortran"
 
 {{< include _slides/why_testing_fortran_is_hard.qmd >}}
 
+{{< include _slides/available_frameworks.qmd >}}
+
 # Acknowledgements
 
 ::: {.nonincremental}
