--- a/rsecon-2025-unit-testing-in-fortran/index.qmd
+++ b/rsecon-2025-unit-testing-in-fortran/index.qmd
@@ -4,6 +4,7 @@ date: 2025-11-11
 path: rsecon-2025-unit-testing-in-fortran/index.qmd
 subtitle: "RSECon 2025"
 title: Unit testing in Fortran
+format: html
 ---
 
 {{< pdf index.pdf height=600 width=100% >}}
