--- a/unit-testing-in-fortran/index.qmd
+++ b/unit-testing-in-fortran/index.qmd
@@ -3,7 +3,7 @@ author: Connor Aird
 date: 2026-01-31
 format: revealjs
 subtitle: "FOSDEM 2026: Testing and Continuous Delivery devroom"
-title: "Unit tesing in Fortran"
+title: Unit testing in Fortran
 ---
 
 {{< include _slides/why_testing_fortran_is_hard.qmd >}}
